--- a/ClassifactionAssignmentV3.ipynb
+++ b/ClassifactionAssignmentV3.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 29,
       "id": "1b540543",
       "metadata": {
         "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -42,7 +42,6 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import classification_report, confusion_matrix\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "import seaborn as sns\n",
         "from sklearn.metrics  import f1_score,accuracy_score"
@@ -50,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 30,
       "id": "647b1a4a",
       "metadata": {
         "execution": {
@@ -275,7 +274,7 @@
               "[5 rows x 27 columns]"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 30,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -288,7 +287,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 31,
       "id": "aa3a9d71",
       "metadata": {
         "execution": {
@@ -317,7 +316,7 @@
               "(899164, 27)"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -338,7 +337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 32,
       "id": "cd7164f0",
       "metadata": {
         "collapsed": false,
@@ -399,7 +398,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -411,7 +410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 33,
       "id": "fd60b7e9",
       "metadata": {
         "collapsed": false,
@@ -447,7 +446,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 34,
       "id": "edcc7566",
       "metadata": {
         "collapsed": false,
@@ -483,7 +482,7 @@
               "Name: Default, dtype: int64"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -496,7 +495,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 35,
       "id": "b0507c6e",
       "metadata": {
         "collapsed": false,
@@ -536,7 +535,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -565,7 +564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 36,
       "id": "d2f47f7f",
       "metadata": {
         "collapsed": false,
@@ -606,7 +605,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 37,
       "id": "0afe6f93",
       "metadata": {
         "collapsed": false,
@@ -814,7 +813,7 @@
               "4       $0.00   $229,000.00   $229,000.00           0        0  "
             ]
           },
-          "execution_count": 9,
+          "execution_count": 37,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -826,7 +825,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 38,
       "id": "12437a72",
       "metadata": {
         "collapsed": false,
@@ -860,7 +859,7 @@
               "(802319, 19)"
             ]
           },
-          "execution_count": 10,
+          "execution_count": 38,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -872,7 +871,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 39,
       "id": "9d2da6c3",
       "metadata": {
         "collapsed": false,
@@ -917,7 +916,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 40,
       "id": "19dc5bbf",
       "metadata": {
         "collapsed": false,
@@ -953,7 +952,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 41,
       "id": "62e2d456",
       "metadata": {
         "collapsed": false,
@@ -991,7 +990,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 42,
       "id": "3ec6bd14",
       "metadata": {
         "execution": {
@@ -1020,7 +1019,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 43,
       "id": "49516c01",
       "metadata": {
         "collapsed": false,
@@ -1057,7 +1056,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 44,
       "id": "074cf126",
       "metadata": {
         "collapsed": false,
@@ -1091,7 +1090,7 @@
               "(783512, 19)"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 44,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1102,7 +1101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 45,
       "id": "4af0f04f",
       "metadata": {
         "collapsed": false,
@@ -1137,7 +1136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 46,
       "id": "3738d465",
       "metadata": {
         "collapsed": false,
@@ -1174,7 +1173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 47,
       "id": "da6da420",
       "metadata": {
         "collapsed": false,
@@ -1397,7 +1396,7 @@
               "[5 rows x 123 columns]"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 47,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1408,7 +1407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 48,
       "id": "9bc4e9ad",
       "metadata": {
         "collapsed": false,
@@ -1443,7 +1442,7 @@
               "       32, 56, 48, 11, 92, 22, 49, 55])"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 48,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1454,7 +1453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 49,
       "id": "de962508",
       "metadata": {
         "collapsed": false,
@@ -1493,7 +1492,7 @@
               "      dtype='object', length=123)"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 49,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1504,7 +1503,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 50,
       "id": "90f5426f",
       "metadata": {
         "collapsed": false,
@@ -1549,7 +1548,7 @@
               "Length: 123, dtype: object"
             ]
           },
-          "execution_count": 22,
+          "execution_count": 50,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1571,7 +1570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1590,7 +1589,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 52,
       "metadata": {},
       "outputs": [
         {
@@ -1599,7 +1598,7 @@
               "RandomForestClassifier()"
             ]
           },
-          "execution_count": 24,
+          "execution_count": 52,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1615,33 +1614,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 53,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.9999744739072279\n",
-            "0.9999744739072279\n",
-            "0.0032673398748200412\n"
+            "[[1 0]\n",
+            " [1 0]\n",
+            " [1 0]\n",
+            " ...\n",
+            " [1 0]\n",
+            " [1 0]\n",
+            " [0 1]]\n"
           ]
         }
       ],
       "source": [
         "from sklearn.metrics import mean_absolute_error\n",
-        "from sklearn.metrics import r2_score\n",
+        "from sklearn.metrics import classification_report, confusion_matrix\n",
         "\n",
         "# We use the predict() on the model to predict the output\n",
         "pred=RF.predict(X_test)\n",
-        " \n",
-        "# for classification we use accuracy and F1 score\n",
-        "print(accuracy_score(y_test,pred))\n",
-        "print(f1_score(y_test,pred,average='micro'))\n",
-        " \n",
-        "# for regression we use R2 score and MAE(mean absolute error)\n",
-        "# all other steps will be same as classification as shown above\n",
-        "print(mean_absolute_error(y_test,pred))"
+        "print(pred)"
       ]
     },
     {
@@ -1666,12 +1662,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 56,
       "metadata": {
         "id": "GvJ5GWUr9y9P"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The Random Forest model has a accuracy score of 0.9999642634701191 and a F1 score of 0.9999668159946905.\n",
+            "This model also has a Mean Absolute Error of 0.0045717232154708545.\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00    164065\n",
+            "           1       1.00      1.00      1.00     31813\n",
+            "\n",
+            "   micro avg       1.00      1.00      1.00    195878\n",
+            "   macro avg       1.00      1.00      1.00    195878\n",
+            "weighted avg       1.00      1.00      1.00    195878\n",
+            " samples avg       1.00      1.00      1.00    195878\n",
+            "\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/sentinel/opt/anaconda3/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in samples with no predicted labels. Use `zero_division` parameter to control this behavior.\n",
+            "  _warn_prf(average, modifier, msg_start, len(result))\n"
+          ]
+        }
+      ],
+      "source": [
+        "# for classification we use accuracy and F1 score\n",
+        "accuracy = accuracy_score(y_test,pred)\n",
+        "f1 = f1_score(y_test,pred,average='micro')\n",
+        "mae = mean_absolute_error(y_test,pred)\n",
+        "classy = classification_report(y_test, pred)\n",
+        "\n",
+        "print(f\"The Random Forest model has a accuracy score of {accuracy} and a F1 score of {f1}.\")\n",
+        "print(f\"This model also has a Mean Absolute Error of {mae}.\")\n",
+        "print(f\"{classy}\")"
+      ]
     }
   ],
   "metadata": {
